demo/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  labels:
    app: nginx
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  rules:
    - host: myminikube.info
      http:
        paths:
        - path: /
          backend:
            serviceName: nginx
            servicePort: 80
